Update build configuration, tests and workflows.
Add Maven wrapper

Attempt to stabilise time code test.

Update pom with Njord extension for deployment.

Various Javadoc fixes to address Javadoc NPE failure.