@@ -33,12 +33,12 @@
   
   <distributionManagement>
     <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <id>sonatype-central</id>
+      <url>https://central.sonatype.com/repository/maven-snapshots</url>
     </snapshotRepository>
     <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <id>sonatype-central</id>
+      <url>https://repo.maven.apache.org/maven2</url>
     </repository>
   </distributionManagement>
 
@@ -64,10 +64,10 @@
   </developers>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.release>8</maven.compiler.release>
     <maven.test.jvmargs></maven.test.jvmargs>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <njord.version>0.8.5</njord.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
@@ -80,7 +80,7 @@
     <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna</artifactId>
-      <version>[5.2.0,6.0)</version>
+      <version>5.18.1</version>
     </dependency>
   </dependencies>
 
@@ -103,16 +103,23 @@
         </excludes>
       </testResource>
     </testResources>
+    <extensions>
+      <extension>
+        <groupId>eu.maveniverse.maven.njord</groupId>
+        <artifactId>extension3</artifactId>
+        <version>${njord.version}</version>
+      </extension>
+    </extensions>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M7</version>
+        <version>3.5.4</version>
         <configuration>
-          <!--<skipTests>true</skipTests>-->
           <forkCount>1</forkCount>
+          <parallel>none</parallel>
           <reuseForks>false</reuseForks>
-          <argLine>-Djna.nosys=true ${maven.test.jvmargs}</argLine>
+          <argLine>-XX:+IgnoreUnrecognizedVMOptions --enable-native-access=ALL-UNNAMED -Djna.nosys=true ${maven.test.jvmargs}</argLine>
           <excludes>
             <exclude>**/Test*.java</exclude>
           </excludes>
@@ -120,22 +127,22 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.14.1</version>
+        <configuration>
+          <release>8</release>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.1.2</version>
+        <version>3.4.2</version>
         <configuration>
           <archive>
             <manifestEntries>
               <Automatic-Module-Name>org.freedesktop.gstreamer</Automatic-Module-Name>
             </manifestEntries>
           </archive>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.4</version>
-        <configuration>
-          <excludePackageNames>org.freedesktop.gstreamer.lowlevel</excludePackageNames>
         </configuration>
       </plugin>
     </plugins>
@@ -173,7 +180,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>2.2.1</version>
+            <version>3.3.1</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -186,9 +193,11 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.10.4</version>
+            <version>3.12.0</version>
             <configuration>
+              <doclint>none</doclint>
               <excludePackageNames>org.freedesktop.gstreamer.lowlevel</excludePackageNames>
+              <release>8</release>
             </configuration>
             <executions>
               <execution>
@@ -202,7 +211,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.5</version>
+            <version>3.2.8</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
